# audible

./: .gitignore  CLAUDE.md  README.md  audible.py  audible.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_audio_response.json  test_tts_api.sh
books/gatsby/: book.txt
books/gatsby/analysis/: chapter_1_analysis.json  chapter_2_analysis.json  chapter_3_analysis.json  chapter_4_analysis.json  chapter_5_analysis.json  chapter_6_analysis.json  chapter_7_analysis.json  chapter_8_analysis.json  chapter_9_analysis.json
books/gatsby/chapters/: 1_chapter_i.txt  2_chapter_ii.txt  3_chapter_iii.txt  4_chapter_iv.txt  5_chapter_v.txt  6_chapter_vi.txt  7_chapter_vii.txt  8_chapter_viii.txt  9_chapter_ix.txt
books/gatsby/characters/: characters.json  daisy_buchanan.json  daisy_fay.json  george_wilson.json  henry_c__gatz__mr__gatz_.json  jay_gatsby.json  jay_gatsby__james_gatz_.json  jordan_baker.json  meyer_wolfshiem.json  michaelis.json  myrtle_wilson.json  nick_carraway.json  tom_buchanan.json
books/gatsby/scripts/: chapter_1_script.json  chapter_2_script.json  chapter_3_script.json  chapter_4_script.json  (+5 more)
books/test/: book.txt
src/audible/: __init__.py  prompts.json
tests/: conftest.py
tests/integration/: conftest.py  test_audio_assembly.py  test_audio_generation.py  test_audio_generation_cartesia.py  test_audio_generation_openai.py  test_book_preparation.py  test_book_workflow_openai.py  test_chapter_analysis.py  test_character_extraction.py  test_script_generation.py  test_tts_preparation.py  test_voice_preparation.py
(+179 files in other folders)
