[project]
name = "audible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "tiktoken",
    "anthropic>=0.10.0",
    "cartesia>=2.0.0",
    "google-cloud-aiplatform>=1.25.0",
    "google-cloud-texttospeech>=2.11.0",
    "csm-mlx @ git+https://github.com/senstella/csm-mlx",
]
[project.optional-dependencies]
dev= [
    "python-dotenv",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
]

[project.scripts]
audible = "audible.cli.main:main"

[tool.uv]
package = true